--- a/page34.html
+++ b/page34.html
@@ -46,7 +46,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="Sports.html">Sports</a></li><li class="nav-item"><a class="nav-link link" href="Comedy.html">Comedy</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Events.html">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives">Archives</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/"></a></li><li class="nav-item"><a class="nav-link link" href="Sports.html">Quizzes</a></li><li class="nav-item"><a class="nav-link link" href="Sports.html">Sports</a></li><li class="nav-item"><a class="nav-link link" href="Comedy.html">Comedy</a></li><li class="nav-item"><a class="nav-link link" href="Arts.html">Arts</a></li><li class="nav-item"><a class="nav-link link" href="Events.html">Events</a></li><li class="nav-item"><a class="nav-link link" href="Opinions.html">Opinions</a></li><li class="nav-item dropdown"><a class="nav-link link" href="Miscellaneous.html">Miscellaneous</a></li><li class="nav-item"><a class="nav-link link" href="About.html">About</a></li><li class="nav-item"><a class="nav-link link" href="Archives">Archives</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">free site creator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-as" data-rv-view="625" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/q">bootstrap slider</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-as" data-rv-view="625" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -300,7 +300,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <figure class="mbr-figure">
-                    <div><img src="assets/images/screen-shot-2017-11-15-at-8.27.14-am-493x27151.png"></div>
+                    <div><img src="assets/images/screen-shot-2017-11-15-at-8.27.14-am-493x27153.png"></div>
 
                     <figcaption class="mbr-figure-caption mbr-figure-caption-over">
                         <div class="container"></div>
